exports[`buildStatus returns correct build status for the \`BLOCKED\` state 1`] = `
Object {
  "prefix": "Blocked",
  "timeValue": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildStatus returns correct build status for the \`CANCELED\` state 1`] = `
Object {
  "prefix": "Canceled",
  "timeValue": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildStatus returns correct build status for the \`CANCELING\` state 1`] = `
Object {
  "prefix": "Canceled",
  "timeValue": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildStatus returns correct build status for the \`FAILED\` state 1`] = `
Object {
  "prefix": "Failed",
  "timeValue": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildStatus returns correct build status for the \`NOT_RUN\` state 1`] = `
Object {
  "prefix": "Created",
  "timeValue": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildStatus returns correct build status for the \`PASSED\` state 1`] = `
Object {
  "prefix": "Passed",
  "timeValue": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildStatus returns correct build status for the \`RUNNING\` state 1`] = `
Object {
  "prefix": "Created",
  "timeValue": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildStatus returns correct build status for the \`RUNNING\` state 2`] = `
Object {
  "prefix": "Created",
  "timeValue": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildStatus returns correct build status for the \`SCHEDULED\` state 1`] = `
Object {
  "prefix": "Scheduled",
  "timeValue": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildStatus returns correct build status for the \`SKIPPED\` state 1`] = `
Object {
  "prefix": "Skipped",
  "timeValue": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildTime returns correct time properties for the \`BLOCKED\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
  "to": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildTime returns correct time properties for the \`BLOCKED\` state 2`] = `
Object {
  "from": 2016-10-05T05:14:26.920Z,
  "to": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildTime returns correct time properties for the \`BLOCKED\` state 3`] = `
Object {
  "from": undefined,
}
`;

exports[`buildTime returns correct time properties for the \`CANCELED\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
  "to": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildTime returns correct time properties for the \`CANCELED\` state 2`] = `
Object {
  "from": 2016-10-05T05:14:26.920Z,
  "to": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildTime returns correct time properties for the \`CANCELED\` state 3`] = `
Object {
  "from": undefined,
}
`;

exports[`buildTime returns correct time properties for the \`CANCELING\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildTime returns correct time properties for the \`CANCELING\` state 2`] = `
Object {
  "from": 2016-10-05T05:14:26.920Z,
}
`;

exports[`buildTime returns correct time properties for the \`FAILED\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
  "to": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildTime returns correct time properties for the \`FAILED\` state 2`] = `
Object {
  "from": 2016-10-05T05:14:26.920Z,
  "to": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildTime returns correct time properties for the \`NOT_RUN\` state 1`] = `Object {}`;

exports[`buildTime returns correct time properties for the \`NOT_RUN\` state 2`] = `Object {}`;

exports[`buildTime returns correct time properties for the \`PASSED\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
  "to": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildTime returns correct time properties for the \`PASSED\` state 2`] = `
Object {
  "from": 2016-10-05T05:14:26.920Z,
  "to": 2016-10-05T04:57:47.000Z,
}
`;

exports[`buildTime returns correct time properties for the \`RUNNING\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildTime returns correct time properties for the \`RUNNING\` state 2`] = `
Object {
  "from": 2016-10-05T05:14:26.920Z,
}
`;

exports[`buildTime returns correct time properties for the \`RUNNING\` state 3`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`buildTime returns correct time properties for the \`RUNNING\` state 4`] = `
Object {
  "from": 2016-10-05T05:14:26.920Z,
}
`;

exports[`buildTime returns correct time properties for the \`SCHEDULED\` state 1`] = `
Object {
  "from": 2016-10-05T05:14:26.920Z,
}
`;

exports[`buildTime returns correct time properties for the \`SCHEDULED\` state 2`] = `
Object {
  "from": 2016-10-05T05:14:26.920Z,
}
`;

exports[`buildTime returns correct time properties for the \`SKIPPED\` state 1`] = `Object {}`;

exports[`buildTime returns correct time properties for the \`SKIPPED\` state 2`] = `Object {}`;
